--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "djangoproject.jp",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Source code of http://djangoproject.jp/",
   "scripts": {
     "build": "npm run -s install-miyadaiku && npm run -s escape-jinja2 && npm run -s prepare-contents && npm run -s prepare-templates && miyadaiku-build work && npm run -s setup-artifacts",
     "escape-jinja2": "sed -i -e '1i {% raw %}' -e '$a {% endraw %}' $(find . -path './djangoproject.jp/doc' -prune -o -type f -name '*.html*' -print)",
-    "install-miyadaiku": "pip3 install miyadaiku",
+    "install-miyadaiku": "python3.8 -m pip install miyadaiku==1.11.0",
     "prepare-contents": "mkdir -p work/contents && cp .miyadaiku/config.yml work/ && mv djangoproject.jp/{about,community,events,howtojoin-transifex,howtotranslate,index.html,translate,translate_old,weblog,whouses} work/contents/",
     "prepare-templates": "mkdir -p work/templates && echo '{{ page.html }}' | tee work/templates/page_index.html | tee work/templates/page_article.html > /dev/null",
     "setup-artifacts": "mv work/outputs/* djangoproject.jp/"
